# base-flask

./: .env  .gitignore  README.md  Thunder-Client_API-Base.json  docker-compose.yml  pyproject.toml
base/: app.py
base/blueprints/: __init__.py
base/blueprints/restapi/: __init__.py  product_category_resource.py  product_resource.py  product_status_resource.py  user_resource.py  user_status_resource.py
base/extensions/: __init__.py  authorize.py  command.py  database.py
base/extensions/config/: .secrets.toml  settings.toml
base/extensions/error/: __init__.py  http_errors.py
base/models/: product.py  product_category.py  product_status.py  user.py  user_status.py
base/templates/: error.html  layout.html
tests/: test_base.py
